# cpp-gamedev-ichi

./: .gitignore  CMakeLists.txt
src/: main.cpp
